# runagent-superbrowser

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  STEALTH.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
nanobot/: diag_proxy.py  diag_solve.py  pyproject.toml  run.py  test_captcha.py  test_classifier.py  test_superbrowser.py  test_vision_bbox.py
nanobot/config/: config.json
nanobot/runagent_superbrowser/: __init__.py  __main__.py  _capture.py  _nanobot_config.py  _runtime.py  client.py  framing.py  modes.py  result.py  server.py
nanobot/superbrowser_bridge/: __init__.py  action_planner.py  action_verifier.py  cli.py  doctor.py  form_session.py  handoff_store.py  help_advisor.py  highlights.py  image_safety.py  loop_detector.py  orchestrator_tools.py  perception_fusion.py  plan_tracker.py  planner_agent.py  routing.py  routing_store.py  search_tools.py  semantic_tools.py  session_tools.py  task_brief.py  task_graph.py  task_plan.py  tier_evaluate.py  tools.py  type_verify.py  usage.py  validator.py  verify_action.py  web_fetch_tool.py  worker_hook.py  workspaces.py
nanobot/superbrowser_bridge/antibot/: __init__.py  bot_detect.py  content.py  cookie_jar.py  dom_indexer.js  fetch.py  fetch_archive.py  fetch_auto.py  fetch_impersonate.py  fetch_undetected.py  headers.py  interactive_session.py  proxy_tiers.py  rate_limit.py  session_pool.py  t3_event_bus.py  t3_viewer.py  tools.py  warmup.py
nanobot/superbrowser_bridge/memory/: __init__.py  compaction.py  hook.py  ledger.py  memory.py  registry.py  site_model.py  store.py  tools.py
nanobot/superbrowser_bridge/orchestrator_tools/: __init__.py  captcha_learnings.py  constants.py  delegate_browser.py  delegation.py  delegation_registry.py  learnings_tools.py  registration.py  registry.py  result_quality.py  url_probe.py
nanobot/superbrowser_bridge/puzzle_solvers/: __init__.py  base.py  browser.py  chess_com.py  grid_drag.py  jigsaw_captcha.py  registry.py  rotation_captcha.py  slider_captcha.py
nanobot/superbrowser_bridge/session_tools/: __init__.py  _label.py  captcha_solver.py  constants.py  crosscheck.py  dom_helpers.py  dom_scans.py  effect.py  effects.py  exceptions.py  feedback.py  formatting.py  http_client.py  registration.py  registry.py  resumption.py  state.py  telemetry.py  vision_pipeline.py  vision_sync.py
nanobot/superbrowser_bridge/tests/: test_action_delta.py  test_action_verifier.py  test_adaptive_graph.py  test_atomic_fix_modes.py  test_atomic_fix_react_tracker.py  test_atomic_fix_wrapper_descent.py  test_bbox_auto_retry.py  test_bbox_enrichment.py  test_bbox_tighten.py  test_bbox_to_pixels_dpr.py  test_browser_scroll_probe.py  test_captcha.py  test_chase_slider.py  test_chevron_click.py  test_click_at_auto_remap.py  test_click_dynamic_id_guard.py  test_click_epoch_recovery.py  test_click_no_effect_records_cursor.py  test_click_playwright_pseudo_guard.py  test_context_eviction.py  test_cursor_bias.py  test_cursor_only_mode.py  test_dom_link_inject.py  test_dom_vision_crosscheck.py  test_effect_classifier.py  test_extract_backcompat.py  test_extract_bm25.py  test_extract_markdown.py  test_extract_media.py  test_focus_pointer.py  (+58 more)
nanobot/vision_agent/: __init__.py  cache.py  client.py  prompts.py  schemas.py
nanobot/workspace/: SOUL.md
nanobot/workspace_browser/: SOUL.md
nanobot/workspace_orchestrator/: SOUL.md  check_abortion_any_image.py  check_any_image.py  check_other_templates.py  check_rev.py  check_template_history.py  check_templates.py  check_thomas_aquinas_any_image.py  check_thomas_aquinas_template.py  check_thomism_any_image.py  check_wiki.py  find_revision.py
nanobot/workspace_search/: SOUL.md
(+225 files in other folders)
